force-app/main/default/objects/PGFPage__c/PGFPage__c.object-meta.xml
<CustomObject>
    <description>Page metadata object for framework.</description>
    <label>Page</label>
    <nameField>
        <label>FB_Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>