force-app/main/default/objects/PGFPage__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Area</description>
    <label>Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>Oversight &amp; Inspections</fullName>
            </value>
            <value>
                <fullName>SUTQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>