force-app/main/default/objects/PGFPage__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Program Type</description>
    <label>Program Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child Care Center</fullName>
            </value>
            <value>
                <fullName>Day Camp</fullName>
            </value>
            <value>
                <fullName>FCC - Type A Home</fullName>
            </value>
            <value>
                <fullName>FCC - Type B Home</fullName>
            </value>
            <value>
                <fullName>In-Home Aide</fullName>
            </value>
            <value>
                <fullName>ODE - Pre School</fullName>
            </value>
            <value>
                <fullName>School Age Child Care</fullName>
            </value>
            <value>
                <fullName>Out of State</fullName>
            </value>
            <value>
                <fullName>Pre School</fullName>
            </value>
            <value>
                <fullName>Out of State Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>