force-app/main/default/objects/PGFPage__c/fields/DDP_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>DDP_Report_Name__c</fullName>
    <description>Maps to the DDP report to be included in OCLQS_ReportDownloader. If this is blank, the button will not render when this PGFPage is constructed on the main page</description>
    <label>DDP Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>