force-app/main/default/objects/PGFPage__c/fields/Default_Transaction_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Default_Transaction_Error_Message__c</fullName>
    <label>Default Transaction Error Message</label>
    <type>TextArea</type>
</CustomField>