force-app/main/default/objects/PGFPage__c/fields/Instructions_to_Application__c.field-meta.xml
<CustomField>
    <fullName>Instructions_to_Application__c</fullName>
    <description>Provide an instruction of the application</description>
    <inlineHelpText>Provide an instruction of the application</inlineHelpText>
    <label>Instructions to Application</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>