force-app/main/default/objects/PGFPage__c/fields/IsForRevision__c.field-meta.xml
<CustomField>
    <fullName>IsForRevision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Revision</label>
    <type>Checkbox</type>
</CustomField>