force-app/main/default/objects/PGFPage__c/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <description>Ownership type</description>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation / LLC</fullName>
            </value>
            <value>
                <fullName>Individual Ownership</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>ODE Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>