force-app/main/default/objects/PGFPage__c/fields/Page_Id__c.field-meta.xml
<CustomField>
    <fullName>Page_Id__c</fullName>
    <externalId>true</externalId>
    <label>Page Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>