force-app/main/default/objects/PGFPage__c/fields/PageTitle__c.field-meta.xml
<CustomField>
    <fullName>PageTitle__c</fullName>
    <description>Page Title</description>
    <label>Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>