force-app/main/default/objects/PGFPage__c/fields/PageType__c.field-meta.xml
<CustomField>
    <fullName>PageType__c</fullName>
    <label>Page Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Contact Us</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>