force-app/main/default/objects/PGFPage__c/fields/Program_InitialStatus__c.field-meta.xml
<CustomField>
    <fullName>Program_InitialStatus__c</fullName>
    <description>Program object initial status</description>
    <label>Program InitialStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>