force-app/main/default/objects/PGFPage__c/fields/Program_SubmissionStatus__c.field-meta.xml
<CustomField>
    <fullName>Program_SubmissionStatus__c</fullName>
    <description>Program Submission Status</description>
    <label>Program SubmissionStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>