force-app/main/default/objects/PGFPage__c/fields/ProgramRecordType__c.field-meta.xml
<CustomField>
    <fullName>ProgramRecordType__c</fullName>
    <description>Program Record Type</description>
    <label>Program Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>