force-app/main/default/objects/PGFPage__c/fields/Registration_Initial_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Initial_Status__c</fullName>
    <label>Registration Initial Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>