force-app/main/default/objects/PGFPage__c/fields/Show_Debugs__c.field-meta.xml
<CustomField>
    <fullName>Show_Debugs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Debugs</label>
    <type>Checkbox</type>
</CustomField>