force-app/main/default/objects/PGFPage__c/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <description>Transaction Type</description>
    <label>Transaction Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amendment - Change of Administrator</fullName>
            </value>
            <value>
                <fullName>Amendment - Change of Capacity-Space</fullName>
            </value>
            <value>
                <fullName>Amendment - Change of Location</fullName>
            </value>
            <value>
                <fullName>CAP Response</fullName>
            </value>
            <value>
                <fullName>New Application</fullName>
            </value>
            <value>
                <fullName>Program Close</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Report Incident/Injury</fullName>
            </value>
            <value>
                <fullName>SUTQ - Annual Report</fullName>
            </value>
            <value>
                <fullName>SUTQ - Initial Registration</fullName>
            </value>
            <value>
                <fullName>SUTQ - Ongoing Registration</fullName>
            </value>
            <value>
                <fullName>Update Contact Information</fullName>
            </value>
            <value>
                <fullName>Update Day Camp</fullName>
            </value>
            <value>
                <fullName>Update Facility Information</fullName>
            </value>
            <value>
                <fullName>Update FCC Resident Information</fullName>
            </value>
            <value>
                <fullName>Update In-Home Aide</fullName>
            </value>
            <value>
                <fullName>Update On-site Contact Information</fullName>
            </value>
            <value>
                <fullName>Update Outdoor Space Information</fullName>
            </value>
            <value>
                <fullName>Update Out of State</fullName>
            </value>
            <value>
                <fullName>Update Space Information</fullName>
            </value>
            <value>
                <fullName>Day Camp</fullName>
            </value>
            <value>
                <fullName>In-Home Aide</fullName>
            </value>
            <value>
                <fullName>Registration - Out of State</fullName>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
            <value>
                <fullName>Update Authorized Rep</fullName>
            </value>
            <value>
                <fullName>Application - CC Center</fullName>
            </value>
            <value>
                <fullName>Application - FCC</fullName>
            </value>
            <value>
                <fullName>Application - ODE Program</fullName>
            </value>
            <value>
                <fullName>Amendment - Center - Change of Location</fullName>
            </value>
            <value>
                <fullName>Amendment - FCC - Change of Location</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>