force-app/main/default/objects/PGFPage__c/fields/SubmissionStatus__c.field-meta.xml
<CustomField>
    <fullName>SubmissionStatus__c</fullName>
    <description>Submission status, to be set when the form is submitted.</description>
    <label>Submission Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>