force-app/main/default/objects/PGFPage__c/fields/Success_Message_Body__c.field-meta.xml
<CustomField>
    <fullName>Success_Message_Body__c</fullName>
    <label>Success Message Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>