force-app/main/default/objects/PGFPage__c/fields/Success_Title__c.field-meta.xml
<CustomField>
    <fullName>Success_Title__c</fullName>
    <label>Success Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>