force-app/main/default/objects/PGFPage__c/fields/Transaction_InitialStatus__c.field-meta.xml
<CustomField>
    <fullName>Transaction_InitialStatus__c</fullName>
    <description>Transaction InitialStatus</description>
    <label>Transaction InitialStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>