force-app/main/default/objects/PGFPage__c/fields/Transaction_SubmissionStatus__c.field-meta.xml
<CustomField>
    <fullName>Transaction_SubmissionStatus__c</fullName>
    <description>Transaction Submission Status</description>
    <label>Transaction SubmissionStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>