force-app/main/default/objects/PGFPage__c/fields/TransactionRecordType__c.field-meta.xml
<CustomField>
    <fullName>TransactionRecordType__c</fullName>
    <description>Transaction Record Type</description>
    <label>Transaction Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>