force-app/main/default/objects/PGFPage__c/validationRules/TEST_VALIDATION.validationRule-meta.xml
<ValidationRule>
    <fullName>TEST_VALIDATION</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(Name, &apos;TESTING&apos;)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Configurations Name should not contain TESTING</errorMessage>
</ValidationRule>