force-app/main/default/objects/PGFPage__c/listViews/All_Pages.listView-meta.xml
<ListView>
    <fullName>All_Pages</fullName>
    <columns>NAME</columns>
    <columns>DDP_Report_Name__c</columns>
    <columns>Area__c</columns>
    <columns>PageTitle__c</columns>
    <columns>PageType__c</columns>
    <columns>Success_Title__c</columns>
    <columns>Transaction_SubmissionStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Pages</label>
</ListView>