force-app/main/default/objects/PGFPage__c/listViews/Renewal_Application_Pages.listView-meta.xml
<ListView>
    <fullName>Renewal_Application_Pages</fullName>
    <columns>NAME</columns>
    <columns>DDP_Report_Name__c</columns>
    <columns>Area__c</columns>
    <columns>PageTitle__c</columns>
    <columns>PageType__c</columns>
    <columns>Success_Title__c</columns>
    <columns>Transaction_SubmissionStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Licensing - Renewal</value>
    </filters>
    <label>Renewal Application Pages</label>
</ListView>